--- a/package.json
+++ b/package.json
@@ -15,18 +15,24 @@
   },
   "dependencies": {
     "@prisma/client": "4.13.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.6.1",
+    "clsx": "^1.2.1",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "lucide-react": "^0.259.0",
     "ms": "^2.1.3",
     "next": "13.3.2",
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.1",
+    "tailwindcss-animate": "^1.0.6",
     "ts-node": "^10.9.1",
     "typescript": "5.0.4"
   },
