--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "dev": "prisma generate && next dev",
     "build": "prisma generate && prisma db push && prisma db seed && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "docker": "docker-compose up -d",
+    "setup": "npx prisma generate && prisma migrate deploy && prisma db seed",
+    "seed": "npx prisma db seed",
+    "migrate": "npx prisma migrate dev",
+    "db-reset": "npx prisma migrate reset --force"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
