--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "cookies-next": "^2.1.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "lucide-react": "^0.259.0",
@@ -43,7 +45,9 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/ms": "^0.7.31",
+    "mini-css-extract-plugin": "^2.7.6",
     "prisma": "^4.13.0",
     "turbo": "^1.9.3"
   }
